######################################################################
Revision history for Perl extension File::Comments

0.03  02/08/2005
      (ms) Moved extracting functions from Plugin.pm into plugins
      (ms) Added Shell plugin

0.02  02/07/2005
      (ms) Added PPI parser to Perl plugin, enabling inline comments.
      (ms) Added HTML::TokeParser to HTML plugin.

0.01  02/06/2005
      (ms) Where it all began.